donate section added

--- a/styles/style.css
+++ b/styles/style.css
@@ -272,6 +272,64 @@ nav li > a{
     margin-left:12px ;
 }
 
+/* donate section styles  */
+
+.donate-description{
+    
+    text-align: center;
+    text-justify: auto;
+    font-size: 16px;
+    font-weight: 400;
+    margin-bottom: 32px;
+    color:rgba(14, 14, 14, 0.50) ;
+}
+.currency-container{
+    display: flex;
+    gap: 24px;
+    margin-left: 60px;  
+}
+.currency-shared-style{
+
+    font-size: 30px;
+    font-weight: 700;
+    padding: 30px 15px;
+    border: 2px solid #dbdbdb;
+    border-radius: 16px;
+    background-color: white;
+}
+#currency-200{
+   
+    font-size: 30px;
+    font-weight: 700;
+    padding: 30px 15px;
+    border: 2px solid #dbdbdb;
+    border-radius: 16px;
+    background-color: #C6E4D6;
+}
+.amount-input-box{
+    text-align: center;
+    background-color: white;
+    padding: 20px;  
+    margin: 32px 100px ; 
+    
+}
+
+section input[type="text"]{
+    text-align: center;
+    font-size: 20px;
+    font-weight: 400;
+    border: none;
+}
+.done-now-btn{
+    text-align: center;
+    font-size: 18px;
+    font-weight: 600;
+    color: white;
+    background-color: #006A50;
+    border: none;
+    border-radius: 8px;
+    padding: 17px 34px;
+}
 
 /* subscribe newsletter section */
 
@@ -280,7 +338,7 @@ nav li > a{
     border-radius: 24px;
     padding: 80px 120px;
     background-color: #C6E4D6;
-    margin-top: 32px;
+    margin-top: 80px;
     margin-bottom: 80px;
  }
  .newsletter-heading{
@@ -356,3 +414,4 @@ input[type="email"]{
 .social-media a{
     margin-right: 23px;
 }
+
