--- a/styles/style.css
+++ b/styles/style.css
@@ -95,13 +95,14 @@ body{
     transform: scale(1.1);
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
 }
-
-.btn-secondary:hover,
+btn-secondary:hover,
 .btn-secondary:hover,
 .vision-card-1-btn:hover,
 .vision-card-2-btn:hover,
 .vision-card-3-btn:hover,
-.subscribe-btn:hover{
+.subscribe-btn:hover,
+.done-now-btn:hover,
+select:hover{
     background-color: #555ed3;
     transform: scale(1.1);
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
@@ -241,6 +242,51 @@ nav li > a{
     color: rgba(14, 14, 14, 0.80);
     margin-top: 12px;
 }
+
+/* Your Opinion Section styles */
+
+.table-div{
+    background-color: white;
+     padding: 32px;
+    border-radius: 16px;
+}
+
+table{
+    border-collapse: collapse;
+}
+
+td{
+    border: 2px solid #c0c0c0;
+    padding: 12px;
+    font-size: 16px;
+    font-weight: 600;
+}
+
+.question{
+    text-align: left;
+}
+
+select {
+    padding: 12.5px 12.5px 12.5px 16.5px;
+    font-size: 16px;
+    border: 2px solid black;
+    border-radius: 5px;
+    background-color: #C6E4D6;
+    color: #333;
+    font-size: 16px;
+    font-weight: 600;
+}
+
+th{
+
+    background-color:#C6E4D6 ;
+    padding: 12px 14px;
+    font-size: 20px;
+    font-weight: 600;
+    width: 100%;
+}
+
+
 
 /* Resent News Section styles  */
 
